[gd_scene load_steps=6 format=3 uid="uid://cvgt6m3tjswig"]

[ext_resource type="Script" uid="uid://to1l3ios7ilc" path="res://ui/hud.gd" id="1_276te"]
[ext_resource type="Texture2D" uid="uid://d1wcoaqmc7bcm" path="res://ui/textures/OtherResurrectionStone.png" id="2_7ihmi"]
[ext_resource type="Texture2D" uid="uid://cgdk8blma7gop" path="res://ui/textures/ProgressHolder.png" id="3_7ihmi"]
[ext_resource type="Texture2D" uid="uid://r2j4l14nc2ly" path="res://ui/textures/ProgressHolderOver.png" id="4_1v5rv"]
[ext_resource type="Texture2D" uid="uid://diesjuq6succ8" path="res://ui/textures/Progress.png" id="4_en2x2"]

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_276te")

[node name="Resurrections" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 56.0
offset_bottom = 18.0

[node name="ResurrectStone1" type="TextureRect" parent="Resurrections"]
layout_mode = 2
texture = ExtResource("2_7ihmi")

[node name="ResurrectionStone2" type="TextureRect" parent="Resurrections"]
layout_mode = 2
texture = ExtResource("2_7ihmi")

[node name="ResurrectionStone3" type="TextureRect" parent="Resurrections"]
layout_mode = 2
texture = ExtResource("2_7ihmi")

[node name="SpiritManaBar" type="TextureProgressBar" parent="."]
clip_contents = true
layout_mode = 0
offset_top = 23.0
offset_right = 48.0
offset_bottom = 61.0
value = 100.0
fill_mode = 3
texture_under = ExtResource("3_7ihmi")
texture_over = ExtResource("4_1v5rv")
texture_progress = ExtResource("4_en2x2")
texture_progress_offset = Vector2(3, 2)

[node name="SecurityAwarenessLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 63.0
offset_right = 47.0
offset_bottom = 86.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 8
text = "0 %"
